# va

./: README.md  config.example.toml  pyproject.toml  test-config.toml
.beads/: issues.jsonl  va.db
vocal_analyzer/: config.py  feature_extractor.py  key_finder.py  llm_analyzer.py  main.py  output_generator.py  range_analyzer.py  transcriber.py  vocal_extractor.py
vocal_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
